feat: divide configurations for development

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,6 +54,40 @@ spring:
 
 ---
 
+debug: false
+management.endpoints.web.exposure.include: "*"
+
+logging:
+  level:
+    com.alaha.chala: debug
+    org.springframework.web.servlet: debug
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
+
+spring:
+  config.activate.on-profile: dev
+  datasource:
+    url: jdbc:mysql://localhost:3306/board
+    username: ryuu
+    password: 375632
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    open-in-view: false
+    defer-datasource-initialization: true
+    hibernate.ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+      hibernate.default_batch_fetch_size: 100
+  sql.init.mode: always
+  data.rest:
+    base-path: /api
+    detection-strategy: annotated
+  thymeleaf3.decoupled-logic: true
+  security:
+
+
+---
+
 spring:
   config.activate.on-profile: test
   datasource.url: jdbc:h2:mem:testdb
